[gd_scene format=3 uid="uid://y44q6j28vvvu"]

[ext_resource type="Script" uid="uid://34d7qek4wxro" path="res://options.gd" id="1_5v8ap"]

[node name="Control" type="Control" unique_id=471212449]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5v8ap")

[node name="ColorRect" type="ColorRect" parent="." unique_id=94473218]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.0
offset_top = -253.0
offset_right = 253.0
offset_bottom = 253.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15930319, 0.16756171, 0.18132675, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect" unique_id=1812026433]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = -214.0
offset_right = 214.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ColorRect/VBoxContainer" unique_id=750762555]
layout_mode = 2
text = "Speaker Output"

[node name="SpeakerDropdown" type="OptionButton" parent="ColorRect/VBoxContainer" unique_id=1130521290]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="ColorRect/VBoxContainer" unique_id=1775034982]
layout_mode = 2

[node name="Label2" type="Label" parent="ColorRect/VBoxContainer" unique_id=1950996244]
layout_mode = 2
text = "VAC Output"

[node name="VacDropdown" type="OptionButton" parent="ColorRect/VBoxContainer" unique_id=2084027717]
unique_name_in_owner = true
layout_mode = 2

[connection signal="item_selected" from="ColorRect/VBoxContainer/SpeakerDropdown" to="." method="_on_speaker_selected"]
[connection signal="item_selected" from="ColorRect/VBoxContainer/VacDropdown" to="." method="_on_vac_selected"]
